# anl_nuke

./: .clang-format  .gitignore  README.md
amd/: Cargo.toml
amd/src/: amd_reader.rs  anl_module.rs  event.rs  lib.rs  phys.rs
brute/: package-lock.json  package.json
brute/src/: index.html
brute/src-tauri/: Cargo.toml  tauri.conf.json
brute/src-tauri/src/: analysis.rs  main.rs
faust/: Cargo.toml
faust/src/: event.rs  event_reader.rs  lib.rs  nuclear_masses.rs  phys_vec.rs
faust_anl/: Cargo.toml  todo.md
faust_anl/post/cpp/: CMakeLists.txt
faust_anl/post/cpp/src/: 3a_bkgnd.cpp  3a_kde.cpp  3h_correlation_correction_to_3a.cpp  CMakeLists.txt  formatting.cpp  formatting.hpp  kinetic_energy_cm_for_interm.cpp  pir_2023.cpp  real_w_mixed.cpp  real_w_mixed_hist.cpp  rescale_similar_e_rel.cpp  source_momentum_v_e_rel.cpp  vector_diagram.cpp
faust_anl/post/py/: intuition_test.py  mixed_filtering.py  peak_idx.py  plot_7a_erel.py  plot_aa_erel.py  plot_dd_erel.py  plot_real_w_mixed.py  plot_time_to_gen_mixed.py  smoothing_effects.py
faust_anl/post/py/fig/: answer_key.txt
faust_anl/post/py/fig_082923/: answer_key.txt
faust_anl/ref/: ReadPhysEvent_roy.cxx.txt
faust_anl/scripts/: run_2a.ps1  run_3a.ps1  run_4a.ps1  run_7a.ps1
faust_anl/src/: alphas_7_thru.rs  general_particle_selection.rs  joe_anl.rs  lib.rs  relative_energy.rs  source.rs
faust_filter/: Cargo.toml
faust_filter/param/: detnum_corner_z_x_y_r.txt
faust_filter/reference/faust_filter_stuff/: FaustFilter.cxx  FaustFilter.h  detnum_AMDSaturation.txt  detnum_AMDThreshold.txt  detnum_corner_z_x_y_r.txt
faust_filter/src/: faust_filter.rs  lib.rs
n_z_equilibration/: Cargo.toml
n_z_equilibration/src/: basic_stats.rs  lib.rs  n_z_equilibration.rs
nukers/: Cargo.toml  TODO.md
nukers/src/: anl_module.rs  data_set.rs  lib.rs
roost/: Cargo.toml  build.rs  build_save.rs
roost/cpp/: CMakeLists.txt
roost/cpp/src/: CMakeLists.txt  my_bridge.cpp  my_bridge.hpp
roost/src/: lib.rs
