[package]
name = "amd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = "0.3.1"
serde = {version = "1.0.171",  features = ["derive"]}
rmp = "^0.8"
rmp-serde = "1.1.1"
clap = {version = "4.3.15", features = ["derive"]}
rkyv = { version = "0.7", features = ["validation"] }

nukers = {path = "../nukers"}
