[package]
name = "n_z_equilibration"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = {version = "1.0.171",  features = ["derive"]}
rmp = "0.8"
rmp-serde = "1.1.1"
clap = {version = "4.3.15", features = ["derive"]}
serde_json = "1.0.103"

nukers = { path = "../nukers" }
amd = { path = "../amd" }

