[package]
name = "nukers"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.171", features = ["derive"] }
clap = { version = "4.3.15", features = ["derive"] }
rkyv = { version = "0.7", features = ["validation"] }
memmap2 = { version = "0.7.1" }
rand = "0.7"
colored = "2.0.4"
thousands = "0.2.0"
rayon = "1.7.0"
